refactor: update npm package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "brocode",
+  "name": "brocode-ev",
   "version": "1.0.0",
   "description": "Fork for broprint to obfuscate fingerprint retrrieving function",
   "main": "index.js",
